# blab-meeg

./: .gitignore  pyproject.toml
scripts/: All_Pre_Proc__ReUse.py  All_STI_Dics.py  Analysis.py  First_try_Cluster_Tests.py  Fisrt try cluster Test.py  PreProcessing Code For 1 Duration.py  Test_File_All.py  Test_File_Comparison_tSSS_vs_SSS.py  Test_File_Concatenate.py  Test_File_Dic.py  dics_que _precisam_de_double_check.py  one_file_one_life.py  pipfreeze.txt.txt  run_preproc.py
src/blab_meeg/: __init__.py  io.py  preproc.py
