[project]
name = "blab-meeg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Niccolò Bonacchi", email = "nbonacchi@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "mne>=1.10.2",
    "numpy>=2.3.5",
]

[build-system]
requires = ["uv_build>=0.8.16,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.uv.sources]
meeg-analysis = { workspace = true }
